fix: 修改后端getFirst警告